Segundo historial del avance de la pagina

--- a/index.html
+++ b/index.html
@@ -9,94 +9,97 @@
   <link rel="stylesheet" href="css/style.css" />
   <title>FASTLEARN | Bienvenido a FastLearn</title>
 </head>
-
 <body>
-  <nav>
+  <header>
     <ul>
-      <li><a href="">INICIO</a></li>
-      <li><a href="">SECCIÓN 2</a></li>
-      <li><a href="">SECCIÓN 3</a></li>
-      <li><a href="register.html">REGISTRO</a></li>
-      <li><a href="login.html">INGRESAR</a></li>
+      <li> <a href="">INICIO</a> </li>
+      <li> <a href="">SECCIÓN 2</a> </li>
+      <li> <a href="">SECCIÓN 3</a> </li>
+      <li> <a href="register.html">REGISTRO</a> </li>
+      <li> <a href="login.html">INGRESAR</a> </li>
     </ul>
-  </nav>
-  <div class="cont-1">
-    <div class="img-logo">
-      <img src="img/LogoFastLearn.png" alt="" />
-    </div>
-    <div class="titulo-1">
-      <h1>Bienvenido a FASTLEARN</h1>
-      <p>
-        ¡Comienza tu viaje de aprendizaje con FastLearn y descubre un mundo de
-        conocimientos a tu alcance!
-      </p>
-      <a href="#section-1">VER MÁS</a>
-    </div>
-  </div>
+  </header>
+  <div class="circle"></div>
+  <section class="cont-1">
 
-  <div id="section-1" class="section-1">
-    <div class="content-1">
+    <div class="imgBox">
+      <img src="img/book.png" alt="" srcset="">
+    </div>
+
+    <article class="boxTitle-1">
+
+      <h1>Bienvenido a FASTLEARN</h1>
+      <p>¡Comienza tu viaje de aprendizaje con FastLearn y descubre un mundo de
+        conocimientos a tu alcance!</p>
+      <a href="">VER MÁS</a>
+
+    </article>
+
+  </section>
+  
+
+  <section id="section-1" class="section-1">
+
+    <article class="content-1">
+
       <h1>INTRODUCCIÓN</h1>
-      <p>
-        Nos complace darte la bienvenida a nuestra plataforma de aprendizaje
+      <p>Nos complace darte la bienvenida a nuestra plataforma de aprendizaje
         rápida y efectiva. Aquí encontrarás una amplia variedad de cursos
         diseñados para ayudarte a adquirir conocimientos valiosos de manera
-        eficiente.
-      </p>
-      <br />
+        eficiente.</p>
 
-      <p>
-        Nuestra plataforma es fácil de usar y te permite acceder a tus cursos
-        desde cualquier dispositivo. Así podrás aprender en tu propio horario
-        y desde cualquier lugar.
-      </p>
-      <br />
-
-      <p>
-        Tu éxito es nuestra prioridad, por lo que también te ofrecemos
-        recursos adicionales, como bibliotecas virtuales y grupos de estudio,
-        para que aproveches al máximo tu aprendizaje.
-      </p>
-    </div>
-    <div class="img-1">
-      <img
-        src="https://img.freepik.com/vector-gratis/ilustracion-plana-celebracion-dia-internacional-educacion_23-2149967786.jpg"
-        alt="" />
-    </div>
-  </div>
-
-  <div id="section-2" class="section-2">
-    <div class="img-2">
-      <img src="https://img.freepik.com/vector-gratis/ilustracion-concepto-aprendizaje_114360-3454.jpg" alt="" />
-    </div>
-
-    <div class="content-2">
-      <h1>¿Razones para escogernos?</h1>
-      <p>
-        Hay varias razones por las que deberías escoger FastLearn como tu
-        plataforma de aprendizaje. Aquí te presento algunas:
-      </p>
       <br/>
 
-      <p>
-        Aprendizaje rápido y efectivo: Como su nombre lo indica, FastLearn se
+      <p>Nuestra plataforma es fácil de usar y te permite acceder a tus cursos
+        desde cualquier dispositivo. Así podrás aprender en tu propio horario
+        y desde cualquier lugar.</p>
+
+      <br/>
+
+      <p>Tu éxito es nuestra prioridad, por lo que también te ofrecemos
+        recursos adicionales, como bibliotecas virtuales y grupos de estudio,
+        para que aproveches al máximo tu aprendizaje.</p>
+
+    </article>
+
+    <figure class="img-1">
+      <img src="https://img.freepik.com/vector-gratis/ilustracion-plana-celebracion-dia-internacional-educacion_23-2149967786.jpg" alt=""/>
+    </figure>
+    
+  </section>
+
+  <section id="section-2" class="section-2">
+
+    <figure class="img-2">
+      <img src="https://img.freepik.com/vector-gratis/ilustracion-concepto-aprendizaje_114360-3454.jpg" alt="" />
+    </figure>
+
+    <article class="content-2">
+
+      <h1>¿Razones para escogernos?</h1>
+      <p>Hay varias razones por las que deberías escoger FastLearn como tu
+        plataforma de aprendizaje. Aquí te presento algunas: </p>
+      <br/>
+
+      <p>Aprendizaje rápido y efectivo: Como su nombre lo indica, FastLearn se
         enfoca en proporcionar un aprendizaje rápido y efectivo. Los cursos
         están diseñados de manera concisa y estructurada para que puedas
-        adquirir conocimientos de manera eficiente sin perder tiempo.
-      </p>
+        adquirir conocimientos de manera eficiente sin perder tiempo.</p>
       <br/>
 
-      <p>
-        Flexibilidad y conveniencia: La plataforma de FastLearn es fácil de
+      <p>Flexibilidad y conveniencia: La plataforma de FastLearn es fácil de
         usar y accesible desde cualquier dispositivo. Esto te brinda la
         flexibilidad de estudiar en tu propio horario y desde cualquier lugar.
         No importa si estás en casa, en la oficina o en movimiento, puedes
-        acceder a tus cursos cuando lo desees.
-      </p>
-    </div>
-  </div>
+        acceder a tus cursos cuando lo desees.</p>
+
+    </article>
+
+  </section>
+
   <footer>
 
   </footer>
+
 </body>
 </html>
