Segundo historial del avance de la pagina

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,51 +9,59 @@
   <title>FASTLEARN | Bienvenido a FastLearn</title>
 </head>
 <body>
-  <header>
-    <ul>
-      <li> <a href="">INICIO</a> </li>
-      <li> <a href="">SECCIÓN 2</a> </li>
-      <li> <a href="">SECCIÓN 3</a> </li>
-      <li> <a href="register.html">REGISTRO</a> </li>
-      <li> <a href="login.html">INGRESAR</a> </li>
-    </ul>
-  </header>
-  <div class="circle"></div>
-  <section class="cont-1">
+  
+  <header class="header">
 
-    <div class="imgBox">
-      <img src="img/book.png" alt="" srcset="">
+    <navbar>
+
+      <figure class="flexLogo">
+        <a href="index.html"><img src="img/LogoFastLearnWhite.png" alt=""></a>
+      </figure>
+
+      <nav class="nav">
+        <ul>
+          <li> <a href="">INICIO</a> </li>
+          <li> <a href="">SECCIÓN 2</a> </li>
+          <li> <a href="">SECCIÓN 3</a> </li>
+          <li> <a href="register.html">REGISTRO</a> </li>
+          <li> <a href="login.html">INGRESAR</a> </li>
+        </ul>
+      </nav>
+    </navbar>
+
+    <div class="flexbox">
+
+      <figure class="flexImg">
+        <img src="img/vector1.png" alt="">
+      </figure>
+
+      <div class="flexText">
+        <h1>Bienvenido A FASTLEARN</h1>
+        <p>¡Comienza tu viaje de aprendizaje con FastLearn y descubre un mundo de
+          conocimientos a tu alcance!</p>
+      </div>
+
     </div>
 
-    <article class="boxTitle-1">
-
-      <h1>Bienvenido a FASTLEARN</h1>
-      <p>¡Comienza tu viaje de aprendizaje con FastLearn y descubre un mundo de
-        conocimientos a tu alcance!</p>
-      <a href="">VER MÁS</a>
-
-    </article>
-
-  </section>
+  </header>
   
 
   <section id="section-1" class="section-1">
 
-    <article class="content-1">
+    <article class="flexart-1">
 
-      <h1>INTRODUCCIÓN</h1>
       <p>Nos complace darte la bienvenida a nuestra plataforma de aprendizaje
         rápida y efectiva. Aquí encontrarás una amplia variedad de cursos
         diseñados para ayudarte a adquirir conocimientos valiosos de manera
-        eficiente.</p>
-
-      <br/>
-
-      <p>Nuestra plataforma es fácil de usar y te permite acceder a tus cursos
+        eficiente.<br><br>
+        Nuestra plataforma es fácil de usar y te permite acceder a tus cursos
         desde cualquier dispositivo. Así podrás aprender en tu propio horario
         y desde cualquier lugar.</p>
 
-      <br/>
+    </article>
+
+    
+    <article class="flexart-2">
 
       <p>Tu éxito es nuestra prioridad, por lo que también te ofrecemos
         recursos adicionales, como bibliotecas virtuales y grupos de estudio,
@@ -62,19 +69,23 @@
 
     </article>
 
-    <figure class="img-1">
-      <img src="https://img.freepik.com/vector-gratis/ilustracion-plana-celebracion-dia-internacional-educacion_23-2149967786.jpg" alt=""/>
-    </figure>
-    
+    <article class="flexart-3">
+
+      <p>Tu éxito es nuestra prioridad, por lo que también te ofrecemos
+        recursos adicionales, como bibliotecas virtuales y grupos de estudio,
+        para que aproveches al máximo tu aprendizaje.</p>
+
+    </article>
+
   </section>
 
   <section id="section-2" class="section-2">
 
-    <figure class="img-2">
+    <figure class="art-img2">
       <img src="https://img.freepik.com/vector-gratis/ilustracion-concepto-aprendizaje_114360-3454.jpg" alt="" />
     </figure>
 
-    <article class="content-2">
+    <article class="article-2">
 
       <h1>¿Razones para escogernos?</h1>
       <p>Hay varias razones por las que deberías escoger FastLearn como tu
