Tercer historial del avance de la pagina

--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
 
       <p>Tu éxito es nuestra prioridad, por lo que también te ofrecemos
         recursos adicionales, como bibliotecas virtuales y grupos de estudio,
-        para que aproveches al máximo tu aprendizaje.</p>
+        para que aproveches al máximo tu aprendizaje.<br><br>
+      
+        Mejora tus habilidades - Sea cual sea tu objetivo, en FastLearn encontrarás cursos que te ayudarán a mejorar tus habilidades en áreas como programación, diseño gráfico, marketing digital y mucho más.<br><br>
+      </p>
+
+        <div class="flexLinks">
+          <a href="">Más información</a>
+        </div>
 
     </article>
 
