Ultimo cambio realizado 11/06/2023

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="index.html"><img src="img/LogoFastLearnWhite.png" alt=""></a>
       </figure>
 
-      <nav class="nav">
+      <nav>
         <ul>
           <li> <a href="">INICIO</a> </li>
           <li> <a href="">SECCIÓN 2</a> </li>
@@ -80,17 +80,21 @@
 
       <p>Tu éxito es nuestra prioridad, por lo que también te ofrecemos
         recursos adicionales, como bibliotecas virtuales y grupos de estudio,
-        para que aproveches al máximo tu aprendizaje.</p>
+        para que aproveches al máximo tu aprendizaje. <br><br>
+
+        Actualizaciones constantes - Nos aseguramos de mantener nuestros cursos actualizados con los últimos avances y tendencias en cada área. Siempre tendrás acceso a la información más relevante.
+
+        <br><br>
+
+        Aprende a tu ritmo, en cualquier momento y lugar - Con FastLearn, tienes la flexibilidad de acceder a una amplia gama de cursos desde la comodidad de tu hogar o en movimiento. Aprende a tu propio ritmo y según tu horario.
+      
+      </p>
 
     </article>
 
   </section>
 
   <section id="section-2" class="section-2">
-
-    <figure class="art-img2">
-      <img src="https://img.freepik.com/vector-gratis/ilustracion-concepto-aprendizaje_114360-3454.jpg" alt="" />
-    </figure>
 
     <article class="article-2">
 
@@ -112,6 +116,15 @@
         acceder a tus cursos cuando lo desees.</p>
 
     </article>
+
+    <div class="flexSquare">
+      <div class="left">
+
+      </div>
+      <dov class="right">
+
+      </dov>
+    </div>
 
   </section>
 
