Añadido el modo oscuro con localStorage

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
     <navbar>
 
       <figure class="flexLogo">
-        <a href="index.html"><img src="img/LogoFastLearn.png" alt=""></a>
+        <a href="index.html"><img src="img/LogoFastLearn.png" alt="" id="imgchange"></a>
       </figure>
 
       <nav class="nav-main">
         <ul>
-          <li> <a href="">INICIO</a> </li>
-          <li> <a href="">SECCIÓN 2</a> </li>
-          <li> <a href="">SECCIÓN 3</a> </li>
+          <li> <a href="">TUTORIAL</a> </li>
+          <li> <a href="">ACERCA DE</a> </li>
           <li> <a href="register.html">REGISTRO</a> </li>
           <li> <a href="login.html">INGRESAR</a> </li>
           <li><div class="bx bx-moon" id="darkMode-icon"></div></li>
