--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="favicon/favicon-32x32.png" type="image/x-icon" />
   <link rel="stylesheet" href="css/style.css" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <title>FASTLEARN | Bienvenido a FastLearn</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 
 <body>
@@ -27,9 +30,11 @@
           <li> <a href="">ACERCA DE</a> </li>
           <li> <a href="register.html">REGISTRO</a> </li>
           <li> <a href="login.html">INGRESAR</a> </li>
-          <li><div class="bx bx-moon" id="darkMode-icon"></div></li>
+          <li>
+            <div class="bx bx-moon" id="darkMode-icon"></div>
+          </li>
         </ul>
-      </nav>  
+      </nav>
 
 
     </navbar>
@@ -74,7 +79,7 @@
 
         Mejora tus habilidades - Sea cual sea tu objetivo, en FastLearn encontrarás cursos que te ayudarán a mejorar tus
         habilidades en áreas como programación, diseño gráfico, marketing digital y mucho más.<br><br>
-      </p>  
+      </p>
       <div class="flexLinks">
         <a href="index.html">Más información</a>
       </div>
@@ -130,4 +135,5 @@
 
   <script src="js/script.js"></script>
 </body>
+
 </html>
