Añadido Menú Lateral Responsive

--- a/index.html
+++ b/index.html
@@ -25,17 +25,24 @@
       </figure>
 
       <nav class="nav-main">
-        <ul>
+        <ul class="nav-menu">
           <li> <a href="">TUTORIAL</a> </li>
           <li> <a href="">ACERCA DE</a> </li>
           <li> <a href="register.html">REGISTRO</a> </li>
           <li> <a href="login.html">INGRESAR</a> </li>
-          <li>
-            <div class="bx bx-moon" id="darkMode-icon"></div>
-          </li>
         </ul>
-      </nav>
 
+        <div class="btns-nav">
+          <div class="bx bx-moon" id="darkMode-icon">
+
+          </div>
+
+          <button class="nav-toggle">
+            <div class="bx bx-menu-alt-right" id="menu-right-icon"></div>
+          </button>
+          
+        </div>
+      </nav>
 
     </navbar>
 
