Realizado Login y Register con Responsive

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
       <nav class="nav-main">
         <ul class="nav-menu">
-          <li> <a href="">TUTORIAL</a> </li>
-          <li> <a href="">ACERCA DE</a> </li>
-          <li> <a href="register.html">REGISTRO</a> </li>
-          <li> <a href="login.html">INGRESAR</a> </li>
+          <li> <a href=""><i class='bx bx-play-circle'></i>TUTORIAL</a> </li>
+          <li> <a href=""><i class='bx bx-book-bookmark'></i>ACERCA DE</a> </li>
+          <li> <a href="register.html"><i class='bx bxs-registered'></i>REGISTRO</a> </li>
+          <li> <a href="login.html"><i class='bx bxs-user-account' ></i>INGRESAR</a> </li>
         </ul>
 
         <div class="btns-nav">
