Añadido Loader a la página

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 </head>
 
 <body>
-
+  <div class="contenedor-carga" id="carga">
+    <div class="custom-loader"></div>
+	</div>
+  
   <header class="header">
 
     <navbar>
@@ -26,10 +29,10 @@
 
       <nav class="nav-main">
         <ul class="nav-menu">
-          <li> <a href=""><i class='bx bx-play-circle'></i>TUTORIAL</a> </li>
+          <li> <a href=""><i class='bx bx-play-circle'></i>TUTORIAL</a></li>
           <li> <a href=""><i class='bx bx-book-bookmark'></i>ACERCA DE</a> </li>
           <li> <a href="register.html"><i class='bx bxs-registered'></i>REGISTRO</a> </li>
-          <li> <a href="login.html"><i class='bx bxs-user-account' ></i>INGRESAR</a> </li>
+          <li> <a href="login.html"><i class='bx bxs-user-account'></i>INGRESAR</a> </li>
         </ul>
 
         <div class="btns-nav">
@@ -40,7 +43,7 @@
           <button class="nav-toggle">
             <div class="bx bx-menu-alt-right" id="menu-right-icon"></div>
           </button>
-          
+
         </div>
       </nav>
 
