--- a/register.html
+++ b/register.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css-register/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>REGISTRARME | FastLearn</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 
 <body>
@@ -23,7 +27,7 @@
                 <ul class="nav-menu">
                     <li> <a href="index.html"><i class='bx bx-home-alt'></i>INICIO</a> </li>
                     <li> <a href=""><i class='bx bx-book-bookmark'></i>ACERCA DE</a> </li>
-                    <li> <a href="register.html"><i class='bx bxs-registered'></i>REGISTRO</a> </li>
+                    <li> <a href="register.html"><i class='bx bx-play-circle'></i>TUTORIAL</a> </li>
                     <li> <a href="login.html"><i class='bx bxs-user-account'></i>INGRESAR</a> </li>
                 </ul>
 
@@ -41,37 +45,37 @@
 
         </navbar>
     </header>
-        <section class="flexbox">
-            <article class="flexText">
-                <h1>BIENVENIDO DE NUEVO A FASTLEARN</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, expedita rem facere
-                    repudiandae deserunt fugit et quis dolorum sunt tempore adipisci! At labore architecto veritatis aut
-                    praesentium quos maxime quidem!</p>
-            </article>
-            <section class="flexForm">
-                <form action="">
-                    <Label for="nombre">Nombres completos</Label>
-                    <input type="text" name="" id="nombre">
-                    <Label for="opciones">Ingrese su rol</Label>
-                    <select name="opciones" id="opciones">
-                        <option value="">Estudiante</option>
-                        <option value="">Profesor</option>
-                        <option value="">Acudiente</option>
-                    </select>
-                    <label for="edad">Ingrese su edad</label>
-                    <input type="number" min="12" max="20" name="edad" id="edad">
-                    <label for="email">Ingrese su correo</label>
-                    <input type="email" name="email" id="email">
-                    <label for="pass">Ingrese su contraseña</label>
-                    <input type="password" name="pass" id="pass">
-                    <div class="btns">
-                        <button type="submit">Registrarme</button>
-                        <button type="reset">Reiniciar</button>
-                    </div>
-                    <a href="login.html"> - Ya tengo una cuenta existente - </a>
-                </form>
-            </section>
+    <section class="flexbox">
+        <article class="flexText">
+            <h1>BIENVENIDO DE NUEVO A FASTLEARN</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, expedita rem facere
+                repudiandae deserunt fugit et quis dolorum sunt tempore adipisci! At labore architecto veritatis aut
+                praesentium quos maxime quidem!</p>
+        </article>
+        <section class="flexForm">
+            <form action="">
+                <Label for="nombre">Nombres completos</Label>
+                <input type="text" name="" id="nombre">
+                <Label for="opciones">Ingrese su rol</Label>
+                <select name="opciones" id="opciones">
+                    <option value="">Estudiante</option>
+                    <option value="">Profesor</option>
+                    <option value="">Acudiente</option>
+                </select>
+                <label for="edad">Ingrese su edad</label>
+                <input type="number" min="12" max="20" name="edad" id="edad">
+                <label for="email">Ingrese su correo</label>
+                <input type="email" name="email" id="email">
+                <label for="pass">Ingrese su contraseña</label>
+                <input type="password" name="pass" id="pass">
+                <div class="btns">
+                    <button type="submit">Registrarme</button>
+                    <button type="reset">Reiniciar</button>
+                </div>
+                <a href="login.html"> - Ya tengo una cuenta existente - </a>
+            </form>
         </section>
+    </section>
     <script src="js/script.js"></script>
 </body>
 
