--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <title>FASTLEARN | Bienvenido a FastLearn</title>
@@ -18,36 +17,35 @@
   <div class="contenedor-carga" id="carga">
     <div class="custom-loader"></div>
 	</div>
-  
-  <header class="header">
+  <navbar>
 
-    <navbar>
+    <figure class="flexLogo">
+      <a href="index.html"><img src="img/LogoFastLearn.png" alt="" id="imgchange"></a>
+    </figure>
 
-      <figure class="flexLogo">
-        <a href="index.html"><img src="img/LogoFastLearn.png" alt="" id="imgchange"></a>
-      </figure>
+    <nav class="nav-main">
+      <ul class="nav-menu">
+        <li> <a href=""><i class='bx bx-play-circle'></i>TUTORIAL</a></li>
+        <li> <a href=""><i class='bx bx-book-bookmark'></i>ACERCA DE</a> </li>
+        <li> <a href="register.html"><i class='bx bxs-registered'></i>REGISTRO</a> </li>
+        <li> <a href="login.html"><i class='bx bxs-user-account'></i>INGRESAR</a> </li>
+      </ul>
 
-      <nav class="nav-main">
-        <ul class="nav-menu">
-          <li> <a href=""><i class='bx bx-play-circle'></i>TUTORIAL</a></li>
-          <li> <a href=""><i class='bx bx-book-bookmark'></i>ACERCA DE</a> </li>
-          <li> <a href="register.html"><i class='bx bxs-registered'></i>REGISTRO</a> </li>
-          <li> <a href="login.html"><i class='bx bxs-user-account'></i>INGRESAR</a> </li>
-        </ul>
-
-        <div class="btns-nav">
-          <div class="bx bx-moon" id="darkMode-icon">
-
-          </div>
-
-          <button class="nav-toggle">
-            <div class="bx bx-menu-alt-right" id="menu-right-icon"></div>
-          </button>
+      <div class="btns-nav">
+        <div class="bx bx-moon" id="darkMode-icon">
 
         </div>
-      </nav>
 
-    </navbar>
+        <button class="nav-toggle">
+          <div class="bx bx-menu-alt-right" id="menu-right-icon"></div>
+        </button>
+
+      </div>
+    </nav>
+
+  </navbar>
+  
+  <header class="header">
 
     <section class="flexbox">
 
@@ -120,16 +118,16 @@
 
     <article class="article-2">
 
-      <h1>¿Razones para escogernos?</h1>
+      <h2>¿Razones para escogernos?</h2>
       <p>Hay varias razones por las que deberías escoger FastLearn como tu
         plataforma de aprendizaje. Aquí te presento algunas: </p>
-      <br />
+      <br>
 
       <p>Aprendizaje rápido y efectivo: Como su nombre lo indica, FastLearn se
         enfoca en proporcionar un aprendizaje rápido y efectivo. Los cursos
         están diseñados de manera concisa y estructurada para que puedas
         adquirir conocimientos de manera eficiente sin perder tiempo.</p>
-      <br />
+      <br>
 
       <p>Flexibilidad y conveniencia: La plataforma de FastLearn es fácil de
         usar y accesible desde cualquier dispositivo. Esto te brinda la
@@ -145,5 +143,4 @@
 
   <script src="js/script.js"></script>
 </body>
-
 </html>
