--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <navbar>
 
     <figure class="flexLogo">
-      <a href="index.html"><img src="img/LogoFastLearn.png" alt="" id="imgchange"></a>
+      <a href="index.html"><img src="img/LogoFastLearn.png" alt="LogoFastLearn" id="imgchange" title="LogoFastLearn"></a>
     </figure>
 
     <nav class="nav-main">
