--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <title>FASTLEARN | Bienvenido a FastLearn</title>
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
@@ -20,7 +20,7 @@
   <navbar>
 
     <figure class="flexLogo">
-      <a href="index.html"><img src="img/LogoFastLearn.png" alt="LogoFastLearn" id="imgchange" title="LogoFastLearn"></a>
+      <img src="img/LogoFastLearn.png" alt="LogoFastLearn" title="LogoFastLearn">
     </figure>
 
     <nav class="nav-main">
