Reinicio página web

--- a/index.html
+++ b/index.html
@@ -17,33 +17,22 @@
   <div class="contenedor-carga" id="carga">
     <div class="custom-loader"></div>
 	</div>
-  <navbar>
 
-    <figure class="flexLogo">
-      <img src="img/LogoFastLearn.png" alt="LogoFastLearn" title="LogoFastLearn">
-    </figure>
+  <nav class="nav-main">
 
-    <nav class="nav-main">
-      <ul class="nav-menu">
+      <ul>
         <li> <a href=""><i class='bx bx-play-circle'></i>TUTORIAL</a></li>
-        <li> <a href=""><i class='bx bx-book-bookmark'></i>ACERCA DE</a> </li>
+        <li> <a href=""><i class='bx bx-book-bookmark'></i>ACERCA</a> </li>
         <li> <a href="register.html"><i class='bx bxs-registered'></i>REGISTRO</a> </li>
         <li> <a href="login.html"><i class='bx bxs-user-account'></i>INGRESAR</a> </li>
       </ul>
 
       <div class="btns-nav">
-        <div class="bx bx-moon" id="darkMode-icon">
-
-        </div>
-
-        <button class="nav-toggle">
-          <div class="bx bx-menu-alt-right" id="menu-right-icon"></div>
-        </button>
-
+        <i class='bx bx-moon' id="darkMode-icon"></i>
+        <i class='bx bx-menu' id="nav-toggle"></i>
       </div>
-    </nav>
 
-  </navbar>
+  </nav>
   
   <header class="header">
 
@@ -56,7 +45,7 @@
       </div>
 
       <div class="flexImg">
-        <img src="img/ilustracion.png" alt="">
+        <img src="img/ilustracion-1.webp" alt="">
       </div>
 
     </section>
@@ -67,6 +56,7 @@
   <section id="section-1" class="section-1">
 
     <article class="flexart-1">
+      <h2>Introducción a FastLearn</h2>
 
       <p>Nos complace darte la bienvenida a nuestra plataforma de aprendizaje
         rápida y efectiva. Aquí encontrarás una amplia variedad de cursos
@@ -80,7 +70,7 @@
 
 
     <article class="flexart-2">
-
+      <h2>Resultados efectivos</h2>
       <p>Tu éxito es nuestra prioridad, por lo que también te ofrecemos
         recursos adicionales, como bibliotecas virtuales y grupos de estudio,
         para que aproveches al máximo tu aprendizaje.<br><br>
@@ -95,11 +85,8 @@
     </article>
 
     <article class="flexart-3">
-
-      <p>Tu éxito es nuestra prioridad, por lo que también te ofrecemos
-        recursos adicionales, como bibliotecas virtuales y grupos de estudio,
-        para que aproveches al máximo tu aprendizaje. <br><br>
-
+      <h2>Actualizaciones y mejoras</h2>
+      <p>
         Actualizaciones constantes - Nos aseguramos de mantener nuestros cursos actualizados con los últimos avances y
         tendencias en cada área. Siempre tendrás acceso a la información más relevante.
 
